syntax = "proto3";

package account;

option go_package="github.com/Andylixunan/mini-instagram/global/proto/account";

service Account {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Auth (AuthRequest) returns (AuthResponse);
}

message User {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    User user = 1;
}

message RegisterResponse {
    bool success = 1;
    uint32 userID = 2;
}

message LoginRequest {
    User user = 1;
}

message LoginResponse {
    string token = 1;
}

message AuthRequest {
    string token = 1;
}

message AuthResponse {
    bool valid = 1;
    uint32 userID = 2;
}